FINALIZADO CSS DO  PROJETO AMIGO SECRETO

--- a/Amigo Secreto/index.html
+++ b/Amigo Secreto/index.html
@@ -13,7 +13,7 @@ https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
   <link href="
 https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css
 " rel="stylesheet" />
-  <title>Amigo Secreto</title>
+  <title>Space Friends</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -24,10 +24,10 @@ https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css
       <div class="content__corner-rectangle"></div>
       <div class="content__main">
         <section>
-          <h1 class="section__title">Amigo <span>Secreto</span></h1>
+          <h1 class="section__title">Space <span>Freinds</span></h1>
           <form class="form">
             <label class="form__label">
-              Digite o nome de um amigo
+              Digite o nome do seu amigo intergalático!
             </label>
             <input id="nome-amigo" class="form__input" type="text" placeholder="Nome do amigo">
             <div class="form__buttons">
@@ -39,7 +39,7 @@ https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css
         </section>
         <section class="section--results">
           <article>
-            <p class="friends__title">Amigos incluídos</p>
+            <p class="friends__title">Companheiros intergalático incluidos</p>
             <div class="friends__container">
               <p id="lista-amigos"></p>
             </div>
